syntax = "proto3";
package realearn;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc StreamExperiment (DoubleRequest) returns (stream DoubleReply);
}

message DoubleRequest {

}

message DoubleReply {
  double value = 1;
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}